--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -8,7 +8,7 @@
         <import type="com.taetae98.qrreader.enums.WiFiEncryption" />
 
         <variable
-            name="viewModel"
+            name="barcodeViewModel"
             type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />
 
         <variable
@@ -79,8 +79,8 @@
 
             <com.taetae98.qrreader.view.BarcodeView
                 android:id="@+id/barcode_view"
-                app:barcode="@{viewModel.barcode}"
-                app:format="@{viewModel.format}"
+                app:barcode="@{barcodeViewModel.barcode}"
+                app:format="@{barcodeViewModel.format}"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_margin="50dp"
