--- a/app/src/main/res/layout/fragment_internet.xml
+++ b/app/src/main/res/layout/fragment_internet.xml
@@ -6,7 +6,7 @@
 
     <data>
         <variable
-            name="viewModel"
+            name="barcodeViewModel"
             type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />
 
         <variable
@@ -21,7 +21,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Theme.QRReader.TextInputLayout.FilledBox"
-            android:id="@+id/code_input_layout"
+            android:id="@+id/address_input_layout"
             android:hint="@string/address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
             android:hint="@string/protocol"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/code_input_layout"
+            app:layout_constraintTop_toBottomOf="@id/address_input_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
@@ -57,8 +57,8 @@
 
         <com.taetae98.qrreader.view.BarcodeView
             android:id="@+id/barcode_view"
-            app:barcode="@{viewModel.barcode}"
-            app:format="@{viewModel.format}"
+            app:barcode="@{barcodeViewModel.barcode}"
+            app:format="@{barcodeViewModel.format}"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_margin="50dp"
