--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -7,7 +7,7 @@
         <import type="com.google.zxing.BarcodeFormat" />
 
         <variable
-            name="viewModel"
+            name="barcodeViewModel"
             type="com.taetae98.qrreader.viewmodel.BarcodeViewModel" />
 
         <variable
@@ -35,8 +35,8 @@
 
             <com.taetae98.qrreader.view.BarcodeView
                 android:id="@+id/barcode_view"
-                app:barcode="@{viewModel.barcode}"
-                app:format="@{viewModel.format}"
+                app:barcode="@{barcodeViewModel.barcode}"
+                app:format="@{barcodeViewModel.format}"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_margin="50dp"
@@ -47,12 +47,12 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/qr_text_view"
-                android:text="@{viewModel.barcode}"
+                android:text="@{barcodeViewModel.barcode}"
                 android:textSize="18sp"
                 android:textColor="?attr/colorSecondary"
                 android:gravity="center"
                 android:layout_margin="50dp"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/barcode_view"
                 app:layout_constraintStart_toStartOf="parent"
