--- a/app/src/main/res/layout/fragment_tel.xml
+++ b/app/src/main/res/layout/fragment_tel.xml
@@ -38,6 +38,7 @@
 
         <com.taetae98.qrreader.view.BarcodeView
             android:id="@+id/barcode_view"
+            android:foreground="?attr/selectableItemBackground"
             app:barcode="@{barcodeViewModel.barcode}"
             app:format="@{barcodeViewModel.format}"
             android:layout_width="300dp"
